erDiagram
  User:::accounts {
    string id PK
    datetime createdAt
    datetime updatedAt
    string email UK
    string password
    UserRole role "ADMIN, ALERT_MONITOR, PLANNING_MANAGER, FIREFIGHTER"
    string avatarUrl
    string stationId FK
  }
  FireAlert:::detection {
    int id PK
    datetime createdAt
    datetime updatedAt
    string description
    float confidence
    float latitude
    float longitude
    FireSeverity severity "LOW, MEDIUM, HIGH, CRITICAL"
    AlertStatus status "NEW, IN_PROGRESS, RESOLVED, DISMISSED"
    string imageId FK
  }
  Image:::detection {
    string id PK
    datetime createdAt
    datetime updatedAt
    string url UK
    bool containsFire
    ImageSplit split "TRAIN, VALIDATION, TEST, NONE"
    json metadata
  }
  Planning:::planning {
    string id PK
    datetime createdAt
    datetime updatedAt
    int year
    int weekNumber
    PlanningStatus status "GENERATING, FINALIZED"
    string stationId FK
  }
  ShiftAssignment:::planning {
    string id PK
    datetime createdAt
    datetime updatedAt
    Weekday weekday "MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY"
    ShiftType shiftType "ON_SHIFT, OFF_DUTY, ON_CALL"
    string firefighterId FK
    string planningId FK
  }
  AvailabilitySlot:::planning {
    string id PK
    datetime createdAt
    datetime updatedAt
    int year
    int weekNumber
    Weekday weekday "MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY"
    bool isAvailable
    string firefighterId FK
  }
  FireStation:::registry {
    string id PK
    datetime createdAt
    datetime updatedAt
    string name
    float latitude
    float longitude
  }
  Vehicle:::registry {
    string id PK
    datetime createdAt
    datetime updatedAt
    VehicleType type "AMBULANCE, CANADAIR, SMALL_TRUCK, MEDIUM_TRUCK, LARGE_TRUCK, SMALL_BOAT, LARGE_BOAT, HELICOPTER"
    int totalCount
    int availableCount
    int bookedCount
    string stationId FK
  }
  Firefighter:::registry {
    string id PK
    datetime createdAt
    datetime updatedAt
    string firstName
    string lastName
    FirefighterRank rank "SAPPER, CORPORAL, SERGEANT, ADJUTANT, LIEUTENANT, CAPTAIN"
    string stationId FK
    string userId FK,UK
  }
  FirefighterTraining:::registry {
    string id PK
    datetime createdAt
    datetime updatedAt
    string firefighterId FK,UK
    bool permitB
    bool permitC
    bool permitAircraft
    bool suap
    bool inc
    bool smallTeamLeader
    bool mediumTeamLeader
    bool largeTeamLeader
  }
  Image ||--o{ FireAlert : "related to"
  User ||--|| Firefighter : "linked to"
  User }o--|| FireStation : "belongs to"
  FireStation ||--o{ Planning : "has"
  FireStation ||--o{ Vehicle : "has"
  FireStation ||--o{ Firefighter : "has"
  Firefighter ||--o{ AvailabilitySlot : "declares"
  Firefighter ||--o{ ShiftAssignment : "is assigned to"
  Firefighter ||--|| FirefighterTraining : "linked to"
  Planning ||--o{ ShiftAssignment : "composed of"
  classDef detection fill:#fff4dd,stroke:#000
  classDef accounts fill:#eeeeee,stroke:#000
  classDef registry fill:#cde498,stroke:#000
  classDef planning fill:#ececff,stroke:#000
